Packages_2024/gmp_6.3.0/fp_gmp.pas

procedure mpz_powm(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz); cdecl; external libgmp name '__gmpz_powm';
procedure mpz_powm_sec(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz); cdecl; external libgmp name '__gmpz_powm_sec';
procedure mpz_powm_ui(para1: Pmpz; para2: Pmpz; para3: Tculong; para4: Pmpz); cdecl; external libgmp name '__gmpz_powm_ui';
function mpz_probab_prime_p(para1: Pmpz; para2: longint): longint; cdecl; external libgmp name '__gmpz_probab_prime_p';
procedure mpz_random(para1: Pmpz; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_random';
procedure mpz_random2(para1: Pmpz; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_random2';
procedure mpz_realloc2(para1: Pmpz; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_realloc2';
function mpz_remove(para1: Pmpz; para2: Pmpz; para3: Pmpz): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_remove';
function mpz_root(para1: Pmpz; para2: Pmpz; para3: Tculong): longint; cdecl; external libgmp name '__gmpz_root';
procedure mpz_rootrem(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Tculong); cdecl; external libgmp name '__gmpz_rootrem';
procedure mpz_rrandomb(para1: Pmpz; para2: Pgmp_randstate; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_rrandomb';
function mpz_scan0(para1: Pmpz; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_scan0';
function mpz_scan1(para1: Pmpz; para2: Tmp_bitcnt_t): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpz_scan1';
procedure mpz_set(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_set';
procedure mpz_set_d(para1: Pmpz; para2: double); cdecl; external libgmp name '__gmpz_set_d';
procedure mpz_set_f(para1: Pmpz; para2: Pmpf); cdecl; external libgmp name '__gmpz_set_f';
procedure mpz_set_q(para1: Pmpz; para2: Pmpq); cdecl; external libgmp name '__gmpz_set_q';
procedure mpz_set_si(para1: Pmpz; para2: Tclong); cdecl; external libgmp name '__gmpz_set_si';
function mpz_set_str(para1: Pmpz; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpz_set_str';
procedure mpz_set_ui(para1: Pmpz; para2: Tculong); cdecl; external libgmp name '__gmpz_set_ui';
procedure mpz_setbit(para1: Pmpz; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_setbit';
function mpz_size(para1: Pmpz): Tsize_t; cdecl; external libgmp name '__gmpz_size';
function mpz_sizeinbase(para1: Pmpz; para2: longint): Tsize_t; cdecl; external libgmp name '__gmpz_sizeinbase';
procedure mpz_sqrt(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_sqrt';
procedure mpz_sqrtrem(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_sqrtrem';
procedure mpz_sub(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_sub';
procedure mpz_sub_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_sub_ui';
procedure mpz_ui_sub(para1: Pmpz; para2: Tculong; para3: Pmpz); cdecl; external libgmp name '__gmpz_ui_sub';
procedure mpz_submul(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_submul';
procedure mpz_submul_ui(para1: Pmpz; para2: Pmpz; para3: Tculong); cdecl; external libgmp name '__gmpz_submul_ui';
procedure mpz_swap(para1: Pmpz; para2: Pmpz); cdecl; external libgmp name '__gmpz_swap';
function mpz_tdiv_ui(para1: Pmpz; para2: Tculong): Tculong; cdecl; external libgmp name '__gmpz_tdiv_ui';
procedure mpz_tdiv_q(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_tdiv_q';
procedure mpz_tdiv_q_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_tdiv_q_2exp';
function mpz_tdiv_q_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_tdiv_q_ui';
procedure mpz_tdiv_qr(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Pmpz); cdecl; external libgmp name '__gmpz_tdiv_qr';
function mpz_tdiv_qr_ui(para1: Pmpz; para2: Pmpz; para3: Pmpz; para4: Tculong): Tculong; cdecl; external libgmp name '__gmpz_tdiv_qr_ui';
procedure mpz_tdiv_r(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_tdiv_r';
procedure mpz_tdiv_r_2exp(para1: Pmpz; para2: Pmpz; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_tdiv_r_2exp';
function mpz_tdiv_r_ui(para1: Pmpz; para2: Pmpz; para3: Tculong): Tculong; cdecl; external libgmp name '__gmpz_tdiv_r_ui';
function mpz_tstbit(para1: Pmpz; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpz_tstbit';
procedure mpz_ui_pow_ui(para1: Pmpz; para2: Tculong; para3: Tculong); cdecl; external libgmp name '__gmpz_ui_pow_ui';
procedure mpz_urandomb(para1: Pmpz; para2: Pgmp_randstate; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpz_urandomb';
procedure mpz_urandomm(para1: Pmpz; para2: Pgmp_randstate; para3: Pmpz); cdecl; external libgmp name '__gmpz_urandomm';
procedure mpz_xor(para1: Pmpz; para2: Pmpz; para3: Pmpz); cdecl; external libgmp name '__gmpz_xor';
function mpz_limbs_read(para1: Pmpz): Pmp_limb_t; cdecl; external libgmp name '__gmpz_limbs_read';
function mpz_limbs_write(para1: Pmpz; para2: Tmp_size_t): Pmp_limb_t; cdecl; external libgmp name '__gmpz_limbs_write';
function mpz_limbs_modify(para1: Pmpz; para2: Tmp_size_t): Pmp_limb_t; cdecl; external libgmp name '__gmpz_limbs_modify';
procedure mpz_limbs_finish(para1: Pmpz; para2: Tmp_size_t); cdecl; external libgmp name '__gmpz_limbs_finish';
function mpz_roinit_n(para1: Pmpz; para2: Pmp_limb_t; para3: Tmp_size_t): Pmpz; cdecl; external libgmp name '__gmpz_roinit_n';

{*************** Rational (i.e. Q) routines.  *************** }
procedure mpq_abs(para1: Pmpq; para2: Pmpq); cdecl; external libgmp name '__gmpq_abs';
procedure mpq_add(para1: Pmpq; para2: Pmpq; para3: Pmpq); cdecl; external libgmp name '__gmpq_add';
procedure mpq_canonicalize(para1: Pmpq); cdecl; external libgmp name '__gmpq_canonicalize';
procedure mpq_clear(para1: Pmpq); cdecl; external libgmp name '__gmpq_clear';
procedure mpq_clears(para1: Pmpq); varargs; cdecl; external libgmp name '__gmpq_clears';
function mpq_cmp(para1: Pmpq; para2: Pmpq): longint; cdecl; external libgmp name '__gmpq_cmp';
function _mpq_cmp_si(para1: Pmpq; para2: Tclong; para3: Tculong): longint; cdecl; external libgmp name '__gmpq_cmp_si';
function _mpq_cmp_ui(para1: Pmpq; para2: Tculong; para3: Tculong): longint; cdecl; external libgmp name '__gmpq_cmp_ui';
function mpq_cmp_z(para1: Pmpq; para2: Pmpz): longint; cdecl; external libgmp name '__gmpq_cmp_z';
procedure mpq_div(para1: Pmpq; para2: Pmpq; para3: Pmpq); cdecl; external libgmp name '__gmpq_div';
procedure mpq_div_2exp(para1: Pmpq; para2: Pmpq; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpq_div_2exp';
function mpq_equal(para1: Pmpq; para2: Pmpq): longint; cdecl; external libgmp name '__gmpq_equal';
procedure mpq_get_num(para1: Pmpz; para2: Pmpq); cdecl; external libgmp name '__gmpq_get_num';
procedure mpq_get_den(para1: Pmpz; para2: Pmpq); cdecl; external libgmp name '__gmpq_get_den';
function mpq_get_d(para1: Pmpq): double; cdecl; external libgmp name '__gmpq_get_d';
function mpq_get_str(para1: pchar; para2: longint; para3: Pmpq): pchar; cdecl; external libgmp name '__gmpq_get_str';
procedure mpq_init(para1: Pmpq); cdecl; external libgmp name '__gmpq_init';
procedure mpq_inits(para1: Pmpq); varargs; cdecl; external libgmp name '__gmpq_inits';
function mpq_inp_str(para1: Pmpq; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpq_inp_str';
procedure mpq_inv(para1: Pmpq; para2: Pmpq); cdecl; external libgmp name '__gmpq_inv';
procedure mpq_mul(para1: Pmpq; para2: Pmpq; para3: Pmpq); cdecl; external libgmp name '__gmpq_mul';
procedure mpq_mul_2exp(para1: Pmpq; para2: Pmpq; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpq_mul_2exp';
procedure mpq_neg(para1: Pmpq; para2: Pmpq); cdecl; external libgmp name '__gmpq_neg';
function mpq_out_str(para1: PFILE; para2: longint; para3: Pmpq): Tsize_t; cdecl; external libgmp name '__gmpq_out_str';
procedure mpq_set(para1: Pmpq; para2: Pmpq); cdecl; external libgmp name '__gmpq_set';
procedure mpq_set_d(para1: Pmpq; para2: double); cdecl; external libgmp name '__gmpq_set_d';
procedure mpq_set_den(para1: Pmpq; para2: Pmpz); cdecl; external libgmp name '__gmpq_set_den';
procedure mpq_set_f(para1: Pmpq; para2: Pmpf); cdecl; external libgmp name '__gmpq_set_f';
procedure mpq_set_num(para1: Pmpq; para2: Pmpz); cdecl; external libgmp name '__gmpq_set_num';
procedure mpq_set_si(para1: Pmpq; para2: Tclong; para3: Tculong); cdecl; external libgmp name '__gmpq_set_si';
function mpq_set_str(para1: Pmpq; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpq_set_str';
procedure mpq_set_ui(para1: Pmpq; para2: Tculong; para3: Tculong); cdecl; external libgmp name '__gmpq_set_ui';
procedure mpq_set_z(para1: Pmpq; para2: Pmpz); cdecl; external libgmp name '__gmpq_set_z';
procedure mpq_sub(para1: Pmpq; para2: Pmpq; para3: Pmpq); cdecl; external libgmp name '__gmpq_sub';
procedure mpq_swap(para1: Pmpq; para2: Pmpq); cdecl; external libgmp name '__gmpq_swap';
